# geomstats

./: #geomstats.org#  .#geomstats.org  .all-contributorsrc  .codecov.yml  .coverage  .deepsource.toml  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  0.22.1  1.18.1  :wq  =2.1.2  CONTRIBUTING.md  LICENSE.md  Makefile  OVERVIEW.md  README.md  README.rst  Untitled.ipynb  ci-requirements.txt  dev-requirements.txt  environment.yml  geomstats.org  isometric_beta.py  newlog.py  opt-requirements.txt  play_visu.py  pyproject.toml  pytest.ini  requirements.txt  rigid_transformations.py  rotations.py  sao_Paulo_traffic_optimization.ipynb  setup.cfg  setup.py  test_rigid_transformations.py  test_rotations.py  test_visualization.py  (+2 more)
.github/: CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.metals/: metals.lock.db  metals.mv.db
benchmarks/: generate_benchmark_params.py  script.sh
docs/: .mustache.js  .nblink  01_data_on_manifolds.ipynb  01_data_on_manifolds.rst  02_from_vector_spaces_to_manifolds.rst  03_simple_machine_learning_tangent_spaces.rst  04_frechet_mean_and_tangent_pca.rst  05_embedding_graph_structured_data_h2.rst  api-reference.rst  backend.rst  changelog.rst  conf.py  contributing.rst  datasets.rst  examples.rst  first-steps.rst  geometry.rst  governance.rst  gsod.rst  hackathons.rst  index.rst  install.rst  learning.rst  requirements.doc.txt  requirements.txt  roadmap.rst  troubleshooting.rst  tutorials.rst
examples/: .empirical_frechet_mean_uncertainty_sn.py.swp  README.md  bhv_space.py  dummy_archi2.py  empirical_frechet_mean_uncertainty_s3.py  empirical_frechet_mean_uncertainty_sn.ipynb  empirical_frechet_mean_uncertainty_sn.py  geodesic_regression_grassmann.py  geodesic_regression_grassmannian.ipynb  geodesic_regression_grassmannian.py  geodesic_regression_hypersphere.ipynb  geodesic_regression_hypersphere.py  geodesic_regression_se2.ipynb  geodesic_regression_se2.py  geomstats_in_pymanopt.ipynb  geomstats_in_pymanopt.py  gradient_descent.py  gradient_descent_s2.ipynb  gradient_descent_s2.py  kalman_filter.ipynb  kalman_filter.py  lddmm_landmarks.py  lddmm_landmarks_batch.py  lddmm_landmarks_keops.py  learning_graph_embedding_and_predicting.ipynb  learning_graph_embedding_and_predicting.py  learning_graph_structured_data_h2.ipynb  learning_graph_structured_data_h2.py  loss_and_gradient_se3.py  loss_and_gradient_so3.py  losses_se3.py  losses_so3.py  plot_agglomerative_hierarchical_clustering_s2.ipynb  plot_agglomerative_hierarchical_clustering_s2.py  plot_ahc_s2.py  plot_bch_so3.ipynb  plot_bch_so3.py  plot_expectation_maximisation_manifolds.py  plot_expectation_maximization_ball.ipynb  plot_expectation_maximization_ball.py  (+66 more)
examples/robotic_example/: CMakeLists.txt  LoopTimer.cpp  LoopTimer.h  README.md  RedisClient.h  controller.cpp  iiwa_control.cc  run_simulation.sh  simulation.world
examples/robotic_example/model/iiwa14/: iiwa14.sdf  iiwa14.urdf  model.config  model.sdf
examples/robotic_example/model/iiwa14/meshes/: model.config
examples/robotic_example/model/iiwa14/meshes/iiwa14/collision/: link_0_s.stl  link_1.stl  link_1_s.stl  link_2.stl  link_2_s.stl  link_3.stl  link_3_s.stl  link_4.stl  link_4_s.stl  link_5.stl  link_5_s.stl  link_6.stl  link_6_s.stl  link_7-MF-Touch-pneumatisch.stl  link_7-MF-Touch-pneumatisch_s.stl  link_7.stl  link_7_s.stl
examples/robotic_example/model/iiwa14/meshes/iiwa14/visual/: link_0.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl  link_7-MF-Touch-pneumatisch.stl  link_7.stl
geomstats/: .hypersphere.py.swp  .special_orthogonal_group.py.swp  __about__.py  __init__.py  _logging.py  _mesh.py  algebra.py  algebra_utils.py  base_manifolds.py  connection.py  discretized_curves_space.py  embedded_manifold.py  error.py  errors.py  euclidean_space.py  exceptions.py  general_linear_group.py  grassmannian.py  hyperbolic_space.py  hyperbolic_space2.py  hypersphere.py  integrator.py  invariant_metric.py  lie_group.py  lie_groups.py  losses.py  manifold.py  matrices.py  matrices_space.py  matrices_spaces.py  matrix_lie_group.py  minkowski_space.py  polydisk_poincare.py  product_manifold.py  product_riemannian_metric.py  riemannian_metric.py  rigid_transformations.py  rotations.py  solvers.py  spd_matrices_space.py  (+13 more)
notebooks/: .nblink  00_foundations__introduction_to_geomstats.ipynb  01_data_on_manifolds.ipynb  01_foundations__manifolds.ipynb  02_foundations__connection_riemannian_metric.ipynb  02_from_vector_spaces_to_manifolds.ipynb  03_embedding_graph_structured_data_h2.ipynb  03_practical_methods__data_on_manifolds.ipynb  03_simple_machine_learning_on_tangent_spaces.ipynb  03_simple_machine_learning_tangent_spaces.ipynb  04_frechet_mean_and_tangent_pca.ipynb  04_practical_methods__from_vector_spaces_to_manifolds.ipynb  04_riemannian_frechet_mean_and_tangent_pca.ipynb  04_simple_machine_learning_tangent_spaces.ipynb  05_embedding_graph_structured_data_h2.ipynb  05_practical_methods__simple_machine_learning_on_tangent_spaces.ipynb  05_riemannian_kmeans.ipynb  06_information_geometry.ipynb  06_k_mean_clustering_on_sphere.ipynb  06_practical_methods__riemannian_frechet_mean_and_tangent_pca.ipynb  07_emg_hand_gesture_classification.ipynb  07_implement_your_own_riemannian_geometry.ipynb  07_practical_methods__riemannian_kmeans.ipynb  07_triangular_data_in_kendall_shape_space.ipynb  08_Kendall_shape_space.ipynb  08_create_your_own_geometry.ipynb  08_kendall_shape_space.ipynb  08_practical_methods__information_geometry.ipynb  08_practical_methods__information_geometry_beta.ipynb  08_shape_analysis.ipynb  09_practical_methods__implement_your_own_riemannian_geometry.ipynb  10_kendall_shape_spaces_hands.ipynb  10_practical_methods__shape_analysis.ipynb  10_practical_methods__shape_analysis_of_closed_curves.ipynb  11_practical_methods__riemannian_robust_m_estimator.ipynb  11_real_world_applications__cell_shapes_analysis.ipynb  12_real_world_applications__emg_sign_classification_in_spd_manifold.ipynb  13_real_world_applications__graph_embedding_and_clustering_in_hyperbolic_space.ipynb  (+56 more)
(+1418 files in other folders)
