[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geomstats"
dynamic = ["version"]
authors = [
    {name = "Nina Miolane", email = "nmiolane@gmail.com"}
]
readme = "README.rst"
description = "Geometric statistics on manifolds"
license = {file = "LICENSE.md"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
requires-python = ">= 3.7"
dependencies=[
    "joblib >= 0.17.0",
    "matplotlib >= 3.3.4",
    "numpy >= 1.18.1",
    "pandas >= 1.1.5",
    "scikit-learn >= 0.22.1",
    "scipy >= 1.9",
]

[project.optional-dependencies]
doc = [
    "jupyter",
    "nbsphinx",
    "nbsphinx_link",
    "sphinx <= 5.3.0",
    "sphinx_gallery",
    "pydata-sphinx-theme"
]
lint = [
    "black < 23.0",
    "flake8",
    "flake8-docstrings",
    "Flake8-pyproject",
    "isort",
    "pre-commit"
]
test = [
    "pytest",
    "pytest-cov",
    "coverage",
    "jupyter"
]
graph = ["networkx"]
autograd = ["autograd >= 1.3"]
pytorch = ["torch >= 1.9.1"]
backends = ["geomstats[autograd, pytorch]"]
opt = ["geomstats[graph]"]
dev = ["geomstats[test, lint]"]
all = ["geomstats[dev, opt, backends]"]

[project.urls]
homepage="http://github.com/geomstats/geomstats"
documentation="https://geomstats.github.io/"
repository="http://github.com/geomstats/geomstats"

[tool.setuptools.dynamic]
version = {attr = "geomstats.__version__"}

[tool.setuptools.packages.find]
include = [
    "geomstats",
    "geomstats.*"
]

[tool.setuptools.package-data]
"*" = ["datasets/data/**/*"]

[tool.pytest.ini_options]
markers = [
    "smoke: simple and basic numerical tests.",
    "random: tests that use randomized data."
]

[tool.flake8]
application_import_names = "geomstats"
docstring-convention = "numpy"
exclude = "examples/*.ipynb"
ignore = [
    "W503",
    "W504"
]
import_order_style = "smarkets"
max-line-length = 88
extend-ignore = "E203"
per-file-ignores = [
    "geomstats/learning/_sklearn_wrapper.py: D101, D102, D105",
    "geomstats/_backend/*:F401, D103",
    "geomstats/numerics/*:D104,E731",
    "geomstats/visualization/*: D101, D102",
    "geomstats/visualization/__init__.py: F401",
    "geomstats/tests.py : D101, D102",
    "tests/*: D100, D101, D102, D103, D106, D200, D201, D205, D400, D404, I100, I101, I201, I202",
    "*/__init__.py: D104"
]