[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geomstats"
dynamic = ["version"]
authors = [{ name = "Nina Miolane", email = "nmiolane@gmail.com" }]
readme = "README.rst"
description = "Geometric statistics on manifolds"
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

]
requires-python = ">= 3.9"
dependencies = [
    "joblib >= 0.17.0",
    "matplotlib >= 3.3.4",
    "numpy >= 1.18.1",
    "pandas >= 1.1.5",
    "scikit-learn >= 0.22.1",
    "scipy >= 1.9",
]

[project.optional-dependencies]
doc = [
    "jupyter",
    "nbsphinx",
    "nbsphinx_link@git+https://github.com/maurerle/nbsphinx-link.git@fix_paths",
    "sphinx",
    "sphinx_gallery",
    "pydata-sphinx-theme",
]
lint = ["ruff", "pre-commit"]
test = ["pytest", "pytest-cov", "coverage", "jupyter", "ipython"]
ci = ["pytest-github-actions-annotate-failures"]
test-scripts = []
test-scripts-all = ["geomstats[test-scripts]", "scikeras", "tensorflow"]
graph = ["networkx"]
pykeops = ["pykeops"]
autograd = ["autograd >= 1.3"]
pytorch = ["torch >= 1.9.1"]
backends = ["geomstats[autograd, pytorch]"]
optim-pytorch = ["geomstats[pytorch]", "pytorch-minimize"]
opt = ["geomstats[graph, pykeops, optim-pytorch]"]
dev = ["geomstats[test, test-scripts, lint, doc]"]
all = ["geomstats[dev, opt, backends]"]

[project.urls]
homepage = "http://github.com/geomstats/geomstats"
documentation = "https://geomstats.github.io/"
repository = "http://github.com/geomstats/geomstats"

[tool.setuptools.dynamic]
version = { attr = "geomstats.__version__" }

[tool.setuptools.packages.find]
include = ["geomstats", "geomstats.*"]

[tool.setuptools.package-data]
"*" = ["datasets/data/**/*"]

[tool.pytest.ini_options]
markers = [
    "smoke: simple and basic numerical tests.",
    "random: tests that use randomized data.",
    "validation: not smoke, neither random.",
    "ignore: deselect tests.",
    "vec: vectorization tests.",
    "shape: array shape tests.",
    "type: checks output types.",
    "mathprop: mathematical properties tests.",
    "slow: for slow tests.",
    "redundant: redundant test.",
]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
extend-select = ["I", "D"]
ignore = ["E731"]

[tool.ruff.lint.isort]
known-first-party = ["geomstats"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401", "D104"]
"geomstats/_backend/*" = ["F401"]
"geomstats/test_cases/*" = ["D"]
"geomstats/test/*" = ["D"]
"geomstats/visualization/*" = ["D101", "D102"]
"tests/conftest.py" = ["F401"]
"tests/*" = ["D"]
"examples/*" = ["D102"]
