[metadata]
name = geomstats
version = attr: geomstats.__version__
author = Nina Miolane
author_email = nmiolane@gmail.com
description = Geometric statistics on manifolds
long_description = file: README.rst
long_description_content_type = text/x-rst
licence = MIT
url = http://github.com/geomstats/geomstats
project_urls =
    Homepage = http://github.com/geomstats/geomstats
    Documentation = https://geomstats.github.io/
    Bug Tracker = http://github.com/geomstats/geomstats/-/issues
classifiers = 
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Mathematics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = find:
python_requires = >= 3.7
zip_safe = False
install_requires =
    joblib >= 0.14.1
    matplotlib >= 3.3.4
    numpy >= 1.18.1
    pandas >= 1.1.5
    scikit-learn >= 0.22.1
    scipy >= 1.4.1


[options.packages.find]
include = 
    geomstats
    geomstats.*


[options.package_data]
* = 
    datasets/data/**/*


[options.extras_require]
doc = 
    jupyter
opt = 
    autograd >= 1.3
    tensorflow >= 2.2
    tensorflow-probability >= 0.9
    torch == 1.9.1
dev = 
    pytest
    pytest-cov
    black
    flake8
    flake8-docstrings
    isort
    pre-commit
test =
    geomstats[dev]
all =
    geomstats[test]
    geomstats[opt]

