[metadata]
name = geomstats
version = attr: geomstats.__version__
author = Nina Miolane
author_email = nmiolane@gmail.com
description = Geometric statistics on manifolds
long_description = file: README.rst
long_description_content_type = text/x-rst
licence = MIT
url = http://github.com/geomstats/geomstats
project_urls =
    Homepage = http://github.com/geomstats/geomstats
    Documentation = https://geomstats.github.io/
    Bug Tracker = http://github.com/geomstats/geomstats/-/issues
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Mathematics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = find:
python_requires = >= 3.7
zip_safe = False
install_requires =
    joblib >= 0.14.1
    matplotlib >= 3.3.4
    numpy >= 1.18.1
    pandas >= 1.1.5
    scikit-learn >= 0.22.1
    scipy >= 1.4.1


[options.packages.find]
include =
    geomstats
    geomstats.*


[options.package_data]
* =
    datasets/data/**/*


[options.extras_require]
doc =
    jupyter
    nbsphinx
    nbsphinx_link
    sphinx
    sphinx_gallery
    pydata-sphinx-theme
ci =
    codecov
    coverage
dev =
    pytest
    pytest-cov
    black
    flake8
    flake8-docstrings
    isort
    pre-commit
graph =
    networkx
autograd =
    autograd >= 1.3
tensorflow =
    tensorflow >= 2.2
    tensorflow-probability >= 0.9
torch =
    torch == 1.9.1
opt = geomstats[autograd,tensorflow,torch,graph]
test = geomstats[dev]
all = geomstats[test,opt]


[flake8]
application_import_names = geomstats
docstring-convention = numpy
exclude = examples/*.ipynb
ignore = W503, W504
import_order_style = smarkets
max-line-length = 88
extend-ignore = E203
per-file-ignores =
    geomstats/_backend/autograd/*:F401, D103
    geomstats/_backend/numpy/*:F401, D103
    geomstats/_backend/pytorch/*:F401, D103
    geomstats/_backend/tensorflow/*:F401, D103
    geomstats/visualization/*: D101, D102
    geomstats/visualization/__init__.py: F401
    geomstats/tests.py : D101, D102
    tests/*: D100, D101, D102, D103, D106, D200, D201, D205, D400, D404, I100, I101, I201, I202
    */__init__.py: D104


[tool:pytest]
markers =
    smoke: simple and basic numerical tests.
    random: tests that use randomized data.